--- a/escom-bpm-web/src/main/webapp/view/errors/505.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/errors/505.xhtml
@@ -20,7 +20,7 @@
     </h:head>
     
     <h:body>
-        <h:form id="login-form">
+        <h:form>
             <p:panel styleClass="panelLogin">
                 <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-2, ui-grid-col-10" styleClass="ui-grid-col-12">
                     <p:graphicImage name="/images/escom_logo.jpg"  />
