--- a/escom-bpm-web/src/main/webapp/view/common/file-uppload.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/file-uppload.xhtml
@@ -5,9 +5,10 @@
                  xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <h:form id="fileUploadFRM" style="font-size: 90%;">
+        
         <p:fileUpload id="file" disabled="#{explorerBean.treeSelectedNode == null}"
                       rendered="#{!explorerBean.isTrashSelected()}"
-                      style="width: 100%;"
+                      styleClass="ui-grid-col-12"
                       allowTypes="/(\.|\/)(pdf|docx|doc|rtf|txt|odt|zip|rar|png|tiff|gif|jpe?g)$/"
                       sizeLimit="#{docsBean.maxFileSize}"
                       invalidFileMessage = "#{bundle.INVALID_FILE_TYPE}"
