--- a/escom-bpm-web/src/main/webapp/view/docs/attaches/attaches.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/attaches/attaches.xhtml
@@ -4,6 +4,12 @@
                  xmlns:f="http://xmlns.jcp.org/jsf/core"
                  xmlns:h="http://xmlns.jcp.org/jsf/html">
     
+    <script>
+        function copyToClipboard(text) {
+            window.prompt("Copy to clipboard: Ctrl+C, Enter", text);
+        }
+    </script>
+    
     <p:tab title="#{bundle.Versions}" >
         <p:panelGrid columns="1" layout="grid" styleClass="ui-grid-col-12" columnClasses="ui-grid-col-12" style="font-size: 90%;">
             <p:fileUpload id="file" 
@@ -20,7 +26,7 @@
                           label="#{bundle.UPLOAD_VERSION}" 
                           cancelLabel="#{bundle.Cancel}"
                           uploadLabel="#{bundle.SaveFiles}"
-                          fileUploadListener="#{_bean.addAttache}">                
+                          fileUploadListener="#{docCardBean.addAttache}">                
             </p:fileUpload>
 
             <p:dataTable id="versionsTBL" value="#{_bean.editedItem.attachesList}" 
@@ -54,12 +60,30 @@
                     <h:outputLabel value="#{attache.dateCreate}" >
                         <f:convertDateTime pattern="dd.MM.yy: HH.mm"/>
                     </h:outputLabel>
-                </p:column> 
+                </p:column>                                 
 
+                <p:column headerText="#{bundle.DateLock}" sortBy="#{attache.lockDate}">
+                    <h:outputLabel value="#{attache.lockDate}" >
+                        <f:convertDateTime pattern="dd.MM.yy: HH.mm"/>
+                    </h:outputLabel>
+                </p:column> 
+                
+                <p:column headerText="#{bundle.Editor}" sortBy="#{attache.author.shortFIO}" >
+                    <h:outputLabel value="#{attache.lockAuthor.shortFIO}" />
+                </p:column> 
+                
+                <p:column headerText="#{bundle.LockedTo}" sortBy="#{attache.lockDate}">
+                    <h:outputLabel value="#{attache.lockDate}" >
+                        <f:convertDateTime pattern="dd.MM.yy: HH.mm"/>
+                    </h:outputLabel>
+                </p:column> 
+                
                 <p:column >                    
                     <p:splitButton  title="#{bundle.View}" value="#{bundle.View}"
                                     process="versionsTBL" 
                                     actionListener="#{_bean.onViewAttache(attache)}">
+                        <p:menuitem icon=" ui-icon-pencil" value="#{bundle.Edit}"
+                                    actionListener="#{_bean.onOpenFormLockAttache(attache)}"/>
                         <p:menuitem icon="ui-icon-arrowthickstop-1-s" title="#{bundle.Download}" value="#{bundle.Download}"
                                     ajax="false"
                                     disabled="#{_bean.isReadOnly()}"                           
